--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,6 @@ plugins {
 
 group = 'com.jruchel'
 version = '0.0.1'
-sourceCompatibility = '17'
 
 configurations {
     compileOnly {
@@ -16,6 +15,13 @@ configurations {
 
 repositories {
     mavenCentral()
+}
+
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
 
 dependencies {
