Added wakeup task for heroku

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,7 @@ stock-api:
 general:
   stocks: ${STOCKS}
   timeout: ${TIMEOUT}
+  wakeup-url: ${WAKEUP_URL}
 spring:
   main:
     allow-bean-definition-overriding: true
