--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,13 @@ repositories {
     mavenCentral()
 }
 
+jar {
+    manifest {
+        attributes 'Implementation-Title': 'Gradle Quickstart',
+                'Implementation-Version': version,
+                'Main-Class': 'com.jruchel.stockmonitor.StockMonitorApplication'
+    }
+}
 
 java {
     toolchain {
