--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,12 @@ stock-api:
     value: ${API_KEY_VALUE}
   address: ${API_ADDRESS}
   main-endpoint: ${API_MAIN-ENDPOINT}
+mail:
+  host: ${EMAIL_HOST}
+  port: ${EMAIL_PORT}
+  username: ${EMAIL_USERNAME}
+  password: ${EMAIL_PASSWORD}
+  tls: true
 general:
   notificationEmail: ${NOTIFICATION_EMAIL}
   stocks:
