--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,7 +33,7 @@ general:
       notifyBelow: 50
       notifyAbove: 120
       notifyEveryPercent: 5
-  timeout: ${TIMEOUT}
+  timeout: 8000
   wakeup-url: ${WAKEUP_URL}
 spring:
   main:
