--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,14 @@ plugins {
     id 'java'
 }
 
+bootJar {
+    archiveClassifier.set('boot')
+}
+
+jar {
+    archiveClassifier.set('')
+}
+
 group = 'com.jruchel'
 version = '0.0.1'
 
